force-app/main/default/objects/BLG_Workflow__c/fields/Attempt_10_Schedule_Hours__c.field-meta.xml
<CustomField>
    <fullName>Attempt_10_Schedule_Hours__c</fullName>
    <inlineHelpText>Based on a 9-Hours working day.</inlineHelpText>
    <label>Attempt 10 Schedule (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>