force-app/main/default/objects/BLG_Workflow__c/fields/Close_off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_off_Reason__c</fullName>
    <label>Close off Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile created - No contact</fullName>
            </value>
            <value>
                <fullName>No PA consent received</fullName>
            </value>
            <value>
                <fullName>No PA documents received</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>