force-app/main/default/objects/BLG_Workflow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auto_Close__c</columns>
    <columns>Close_off_Reason__c</columns>
    <columns>Close_off_Contact_Attempts__c</columns>
    <columns>Close_off_Days__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>